// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderTopStyle renders 0 1`] = `
Array [
  .c0 {
  border-top-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders function 1`] = `
Array [
  .c0 {
  border-top-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  border-top-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders negative number 1`] = `
Array [
  .c0 {
  border-top-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-top-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-top-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-top-style: July;
  }
}

@media April {
  .c0 {
    border-top-style: August;
  }
}

@media January {
  .c0 {
    border-top-style: September;
  }
}

@media April {
  .c0 {
    border-top-style: November;
  }
}

@media June {
  .c0 {
    border-top-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-top-style: July;
  }
}

@media April {
  .c0 {
    border-top-style: August;
  }
}

@media January {
  .c0 {
    border-top-style: September;
  }
}

@media April {
  .c0 {
    border-top-style: November;
  }
}

@media June {
  .c0 {
    border-top-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-style: January;
  }
}

@media April {
  .c0 {
    border-top-style: December;
  }
}

@media January {
  .c0 {
    border-top-style: April;
  }
}

@media April {
  .c0 {
    border-top-style: May;
  }
}

@media June {
  .c0 {
    border-top-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top-style: January;
  }
}

@media April {
  .c0 {
    border-top-style: December;
  }
}

@media January {
  .c0 {
    border-top-style: April;
  }
}

@media April {
  .c0 {
    border-top-style: May;
  }
}

@media June {
  .c0 {
    border-top-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders postitive number 1`] = `
Array [
  .c0 {
  border-top-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders string 1`] = `
Array [
  .c0 {
  border-top-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTopStyle renders valid theme path 1`] = `
Array [
  .c0 {
  border-top-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
